# actix-berline-rs

./: Cargo.toml  README.md
client/: index.html
curls/: person.http
slides/: presentation.md
src/: main.rs
