[package]
name = "actix-berline-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.136", features = ["derive"]}
log = "0.4.0"
env_logger = "0.9.0"
actix-session = "0.7.2"
